# dart_ffi_kuznechik

./: .metadata  README.md  ffigen.yaml  kuznechik_bindings.dart  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  dart_pkg_kuznechik_example.dart  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffi_kuznechik_example/: MainActivity.kt
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dart_pkg_kuznechik.dart  ffi_kuznechik.dart  ffi_kuznechik_bindings_generated.dart
src/: CMakeLists.txt  ffi_kuznechik.c
test/: dart_pkg_kuznechik_test.dart
windows/: CMakeLists.txt
